# axum-playground

backend/: .env  Cargo.toml
backend/assets/: hood.html  img.html  index.html
backend/src/: extractors-main.rs  handlers-main.rs  main.rs  responses-main.rs  router-main.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Lesson.tsx  RequestResponse.tsx
frontend/src/lib/: constants.ts  types.ts
frontend/src/pages/: ExtractorsLesson.tsx  HandlersLesson.tsx  Home.tsx  RouterLesson.tsx
