[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
dotenv = "0.15"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

